--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,5 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation project(':libbambuser')
 }
