--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "io.irisplatform.examplebroadcaster"
+        applicationId "com.bambuser.examplebroadcaster"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
